# tatort-finder

./: .dockerignore  .gitignore  Dockerfile  README.md  check_corr.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_pipeline.py
airflow/: Dockerfile  docker-compose.yaml
airflow/dags/: tatort_pipeline.py
app/: streamlit_app.py
data/processed/: plot_embeddings.parquet
src/tatort/ingestion/: imdb_datasets.py  wikipedia_list.py  wikipedia_plots.py
src/tatort/models/: rating_predictor.py  recommender.py  team_ranking.py  topic_model.py
src/tatort/processing/: death_features.py  embeddings.py  team_features.py
src/tatort/storage/: clean.py  load.py  load_plots.py
