[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tatort-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "bertopic>=0.17.4",
    "duckdb>=1.5.3",
    "fastapi>=0.137.1",
    "lightgbm>=4.6.0",
    "mlflow>=3.13.0",
    "pandas>=2.3.3",
    "plotly>=6.8.0",
    "polars>=1.41.2",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "scrapy>=2.16.0",
    "sentence-transformers>=5.5.1",
    "shap>=0.49.1",
    "spacy>=3.8.14",
    "sparqlwrapper>=2.0.0",
    "streamlit>=1.58.0",
    "thefuzz>=0.22.1",
    "tmdbsimple>=2.9.6",
    "uvicorn>=0.49.0",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tatort"]
